# RoboVerify

./: .gitignore  README.md
roboverify/: forall_exists_1.txt  forall_exists_2.txt  format.sh  main.py  promote.txt  pyproject.toml  stack_again.txt  stack_again_with.txt  tbl.txt  unstack.txt
roboverify/2d/: test_2d_grid.py
roboverify/synthesis/: cem.py  cost_func.py  decision_tree.py  highlevel_verification_lib.py  program.py  shared.ipynb  synthesis.py
roboverify/synthesis/api/: instructions.py  program.py
roboverify/synthesis/core/: decision_tree.py  synthesis.py
roboverify/synthesis/entry/: forall_exists_inference.py  inference.py  main.py  run_rollouts.py  test.py  topdown.py  verify_2d_with_learned_invariant.py  verify_stack_with_learned_invariant.py
roboverify/synthesis/environment/: general_env copy.py  general_env_gym.py  skill_env_back2.py  skill_env_gym.py
roboverify/synthesis/environment/ant_maze/: __init__.py  a1.py  create_maze_env.py  maze_env.py
roboverify/synthesis/environment/cee_us_env/: fpp_construction_env.py  robotics.py
roboverify/synthesis/environment/data/: collect_demos.py  collect_demos_backup.py  (+5 more)
roboverify/synthesis/inference_lib/: inference.py  quant_enum_merge.py
roboverify/synthesis/mcmc/: cem.py  decision_tree.py  synthesis.py
roboverify/synthesis/topdown/: dsl.py  topdown.py
roboverify/synthesis/util/: on.py
roboverify/synthesis/verification_lib/: bmc_lib.py  goal_model_diagram.py  highlevel_verification_lib.py  lowlevel_verification_lib.py  program.py  program_local_backup.py  test.py  test_bmc_lib.py
(+86 files in other folders)
