[project]
name = "roboverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython==0.29.36",
    "ffmpeg-python==0.2.0",
    "gymnasium==0.29.1",
    "imageio==2.37.0",
    "matplotlib==3.10.6",
    "mujoco-py==2.1.2.14",
    "multiprocess==0.70.18",
    "numpy==1.26.0",
    "opencv-python==4.10.0.82",
    "perlin-noise==1.14",
    "pip==21",
    "pygame==2.6.1",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "setuptools==65.5.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "wheel==0.38.0",
]
